Finish second workbook

--- a/Workshop 2/TwoScreen_Template/app/src/main/res/values/strings.xml
+++ b/Workshop 2/TwoScreen_Template/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="hundredPercent">100%</string>
     <string name="nameThatBackground">Name that background</string>
     <string name="reset">Reset</string>
+    <string name="setColourBtn">Set The Colour</string>
+    <string name="typeInName">Please type in the name for the colour.</string>
 </resources>
