--- a/workshop_4_5/FAAVersion1/app/src/main/res/values/strings.xml
+++ b/workshop_4_5/FAAVersion1/app/src/main/res/values/strings.xml
@@ -19,4 +19,62 @@
     <string name="home_page_cats">Home page cats</string>
     <string name="home_page_text">Our mission is to find caring homes for our cats and kittens. Sign-up to start the process</string>
     <string name="featured_cat_text">This month\'s featured Cat</string>
+    <string name="distance">Search dist.(miles): %1$d</string>
+    <string name="proximity_dialog_title">Choose value</string>
+    <string name="max_distance_text">Enter maximum search distance</string>
+    <string name="cancel_button_text">Cancel</string>
+    <string name="ok_button_text">OK</string>
+    <string name="choose_dialog_title">Choose a distance</string>
+
+    <string-array name="gender_array">
+        <item>Any gender</item>
+        <item>Female</item>
+        <item>Male</item>
+    </string-array>
+
+    <string-array name="age_range_array">
+        <item>Any age</item>
+        <item>Up to 1 year</item>
+        <item>1 &#8211; 2 years</item>
+        <item>2 &#8211; 5 years</item>
+        <item>Over 5 years</item>
+    </string-array>
+
+    <string-array name="breed_array">
+        <item>Any breed</item>
+        <item>Abyssinian</item>
+        <item>Balinese</item>
+        <item>Bengal</item>
+        <item>Birman</item>
+        <item>British Shorthair</item>
+        <item>Burmese</item>
+        <item>Burmilla</item>
+        <item>Chinchilla</item>
+        <item>Cornish Rex</item>
+        <item>Devon rex</item>
+        <item>Moggie</item>
+        <item>Exotic Shorthair</item>
+        <item>Japanese Bobtail</item>
+        <item>Korat</item>
+        <item>Main Coon</item>
+        <item>Manx</item>
+        <item>Norwegian Forect Cat</item>
+        <item>Manx</item>
+        <item>Ocicat</item>
+        <item>Oriental Shorthair</item>
+        <item>Persian</item>
+        <item>Ragdoll</item>
+        <item>Russian Blue</item>
+        <item>Scottish Fold</item>
+        <item>Siamese</item>
+        <item>Siberian Forest Cat</item>
+        <item>Singapura</item>
+        <item>Showshoe</item>
+        <item>Somali</item>
+        <item>Sphynx</item>
+        <item>Tiffanie</item>
+        <item>Tonkinese</item>
+        <item>Turkish Van</item>
+    </string-array>
+
 </resources>
