--- a/workshop_4_5/FAAVersion1/app/src/main/res/values/strings.xml
+++ b/workshop_4_5/FAAVersion1/app/src/main/res/values/strings.xml
@@ -25,6 +25,8 @@
     <string name="cancel_button_text">Cancel</string>
     <string name="ok_button_text">OK</string>
     <string name="choose_dialog_title">Choose a distance</string>
+    <string name="inmate_image_description">Sylvester</string>
+    <string name="delete_button_description">Remove Cat</string>
 
     <string-array name="gender_array">
         <item>Any gender</item>
